--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "swagger-jsdoc": "^1.7.0",
     "swagger-parser": "^4.0.0-beta.2",
     "swagger-ui": "^2.1.3",
+    "toposort": "^1.0.0",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
